eks/ns.yml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: spotlight-server-customer-1
  name: spotlight-server-customer-1
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: spotlight-server-customer-1
  name: spotlight-server-customer-2
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: spotlight-server-customer-1
  name: spotlight-client-customer-1
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: spotlight-server-customer-1
  name: spotlight-client-customer-2
